manifests/traefik/dashboard-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
  annotations:
    # This tells ArgoCD to wait until 'Wave 0' (the Helm chart) is done
    argoproj.io/sync-wave: "5"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.smeyer.ca`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
  tls: {} # Empty brackets tell Traefik: "Use the default TLSStore certificate"
